<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_margin="10dp"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:cardElevation="8dp"
        app:cardCornerRadius="5dp"

        android:foreground="?android:attr/selectableItemBackground"


        >


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="0dp"
            android:background="@drawable/bg_card"
            >

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/thumbnail_container"

                android:layout_width="150dp"
                android:layout_height="100dp"


                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"

                app:cardCornerRadius="5dp"

                android:backgroundTint="?CardThumbnailBackgroundTint"
                >

                <ImageView
                    android:id="@+id/thumbnail"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/thumbnail"


                    app:srcCompat="@drawable/no_thumbnail_available"
                    />


            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="0dp"

                android:orientation="vertical"

                app:layout_constraintStart_toEndOf="@id/thumbnail_container"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                >

                <TextView
                    android:id="@+id/video_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"

                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:maxLines="1"
                    android:ellipsize="end"

                    android:textColor="@color/black"



                    android:text="@string/video_title" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="4"
                    android:ellipsize="end"
                    android:layout_marginStart="10dp"

                    android:textColor="@color/black"


                    android:text="@string/video_description"
                    />

            </LinearLayout>



        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>